<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="24dp"
    tools:context=".Onboard2">

    <ImageView
        android:id="@+id/onboardImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/premium_vector_1682269487285_27667504c7cd"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/dotsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_active" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/smarter_spending_habits"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/Green"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_insights_into_your_spending_patterns_and_start_building_healthier_financial_habits"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/next"
            android:layout_width="238dp"
            android:layout_height="56dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/Green"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
